# office_agent

./: .gitignore  README.md  README.zh-CN.md  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  i18n.ts  styles.css  types.ts
src/office_agent/: __init__.py  __main__.py  cli.py  config.py  errors.py  renderer.py  schema.py  services.py  template_preview.py  template_support.py
src/office_agent/api/: __init__.py  app.py  models.py  server.py
src/office_agent/llm/: __init__.py  prompts.py  providers.py  service.py
src/office_agent/office/: __init__.py  editor.py  exporter.py  finalizer.py  models.py  prompts.py  reviewer.py
tests/: test_api.py  test_cli.py  test_llm.py  test_office.py  test_renderer.py  test_schema.py  test_smoke.py  test_template_preview.py
